環境構築/CloudFormation/Kubernetes/SecurityGroup.yaml
---
AWSTemplateFormatVersion: "2010-09-09"
Description: k8s cluster network template

#-----------------------------
# Metadata Definition Block
#-----------------------------
Metadata: 
  "AWS::CloudFormation::Interface": 
    ParameterGroups: 
      - Label: 
          default: "SecurityGroup Configuration"
        Parameters: 
          - GroupName
    ParameterLabels: 
      GroupName: 
        default: "SecurityGroup Name"

#-----------------------------
# Parameter Definition Block
#-----------------------------
Parameters:
  GroupName:
    Type: String
    Default: "kubernetes"

#-----------------------------
# Resource Definition Block
#-----------------------------
Resources:
  IngressSG:
    Type: AWS::EC2::SecurityGroup
    Properties: 
      GroupDescription: Kubernetes security group
      GroupName: !Ref GroupName 
      SecurityGroupIngress: 
        -
          Description: "allow all from 10.240.0.0/24"
          IpProtocol: -1
          CidrIp: "10.240.0.0/24"
        -
          Description: "allow all from 10.200.0.0/16"
          IpProtocol: -1
          CidrIp: "10.200.0.0/16"
        -
          Description: "allow ssh"
          IpProtocol: "tcp"
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"
        -
          Description: "allow https"
          IpProtocol: "tcp"
          FromPort: 6443
          ToPort: 6443
          CidrIp: "0.0.0.0/0"
        -
          Description: "allow https"
          IpProtocol: "tcp"
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
        -
          CidrIp: "0.0.0.0/0"
          Description: "allow icmp"
          FromPort: 8
          IpProtocol: "icmp"
          ToPort: -1
      Tags: 
        - Key: "Name"
          Value: "kubernetes"
        - Key: "Project"
          Value: "kubenetes-pj"
        - Key: "Environment"
          Value: "dev"
      VpcId: !ImportValue K8SVPC

#-----------------------------
# Output Definition Block
#-----------------------------
Outputs:
  IngressSGID:
    Description: Information about the sgid
    Value: !Ref IngressSG
    Export:
      Name: K8SIngressSG
